# four-c-trail

./: .gitignore  CMakeLists.txt  README.md  auto.sh  conanfile.txt
src/: main.cpp
